tests/baselines/reference/parserComputedPropertyName22.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts(2,5): error TS1166: A computed property name in a class property declaration must directly refer to a built-in Symbol.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts(2,6): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts (2 errors) ====
    declare class C {
        [e]: number 
        ~~~
!!! error TS1166: A computed property name in a class property declaration must directly refer to a built-in Symbol.
         ~
!!! error TS2304: Cannot find name 'e'.
    }